syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/laiker/auth/pkg/user_v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User API"
    version: "1.0.0"
    contact: {
      name: "Ruslan Demin"
      email: "laiker@yandex.ru"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UserV1 {
  // Создание нового пользователя
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/user/v1/create"
      body: "*"
    };
  };
  // Получение пользователя по ID
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/user/v1/{id}"
    };
  };
  // Обновление пользователя по ID
  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/user/v1/{id}"
      body: "*"
    };
  };
  // Удаление пользователя по ID
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/user/v1/{id}"
    };
  };
}

// Роль пользователя
enum Role {
  // Пользователь
  USER = 0;
  // Админ
  ADMIN = 1;
}

message CreateRequest {
  option (buf.validate.message).cel = {
    id: "passwords_match",
    message: "Пароли должны совпадать",
    expression: "this.password == this.password_confirm"
  };

  string name = 1 [(buf.validate.field).required = true, (buf.validate.field).string.min_len = 3];
  string email = 2 [(buf.validate.field).string.email = true];
  string password = 3 [(buf.validate.field).required = true];
  string password_confirm = 4 [(buf.validate.field).required = true];
  Role role = 5 [(buf.validate.field).enum.defined_only = true];
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message DeleteRequest {
  int64 id = 1;
}



